fixed modal spacing on mobile

--- a/src/modal/mobileModal.css
+++ b/src/modal/mobileModal.css
@@ -5,4 +5,8 @@
         width: 70%;
     }
 
+    .ModalContent {
+        padding-top: 150px;
+        overflow: scroll;
+    }
 }
